# config

./: .editorconfig  .gitignore  Pipfile  README.md  ansible.cfg  development.yml  hosts.yaml  hosts_enc.yml  infrastructure.yml  pyproject.toml  requirements.yaml
docs/: proxmox.md
keys/ssh/: ossareh.pub
oldroles/erisyon/defaults/: main.yml
oldroles/erisyon/handlers/: main.yml
oldroles/erisyon/tests/: test.yml
oldroles/erisyon/vars/: main.yml
oldroles/file-server/files/: exports
oldroles/file-server/tests/: test.yml
oldroles/file-server/vars/: main.yml
oldroles/ossareh/files/: init.vim
oldroles/ossareh/tasks/: main.yml
oldroles/ossareh/tests/: test.yml
roles/cloud-init/files/erisyondev/: network.yml  (+1 more)
roles/erisyon/tasks/: main.yml
roles/file-server/defaults/: main.yml
roles/file-server/files/: exports
roles/file-server/handlers/: main.yml
roles/file-server/tasks/: main.yml
roles/networks/defaults/: main.yml
roles/networks/files/: ossareh_resolv.conf
roles/networks/tasks/: devnet.yml  main.yml  ossareh.yml
roles/networks/vars/: main.yml
roles/ossareh/defaults/: main.yml  smb.yml
roles/ossareh/files/: init.vim  tmux.conf
roles/ossareh/handlers/: main.yml
roles/ossareh/tasks/: main.yml
roles/ossareh/templates/: smb.j2
roles/ossareh/tests/: test.yml
roles/ossareh/vars/: main.yml
roles/projects/defaults/: main.yml
roles/projects/handlers/: main.yml
roles/projects/tasks/: common.yml  main.yml  vega.yml
roles/projects/tests/: test.yml
roles/projects/vars/: main.yml
roles/users/tasks/: main.yml  ossareh.yml
(+6 files in other folders)
