[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["P. Michael Ossareh <ossareh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^3.0.0"
paramiko = "^2.7.2"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
